Firebase connection and two get requests
